objects/ssot__AlternatePayment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AuthorizationProcessingModeId__c</fullName>
        <label>Authorization Processing Mode</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Alternate Payment Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentGatewayTokenText__c</fullName>
        <label>Payment Gateway Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentMethodId__c</fullName>
        <label>Payment Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761211502_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AlternatePayment_PaymentMethodId_map_rel</label>
        <referenceTo>ssot__PaymentMethod__dlm</referenceTo>
        <relationshipLabel>AlternatePayment_PaymentMethodId_map_rel</relationshipLabel>
        <relationshipName>rel_1697761211502_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>